fix(template): stretch app container
Otherwise it won’t fit extension view.

--- a/site/geodetic-registry-2013/site.css
+++ b/site/geodetic-registry-2013/site.css
@@ -26,7 +26,7 @@ div#app {
   inset: 0;
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
 }
 
